Update 1. Hello World.md

--- a/1. Your First Code/1. Hello World.md
+++ b/1. Your First Code/1. Hello World.md
@@ -5,9 +5,11 @@ thing pop up in every single introduction. It's crazy.
 ## Your First Code
 Alright, you've got your Repl sitting there, waiting. It's time to write some code. You see that window with the cursor, blinking? To the left of the console.
 Yeah, you got it. Type this in there:
+###### Example 1.1
 ```python
 print("Hello, World!")
 ```
+
 Then, click the "Run" button at the top. Check the console on the right. Woah! What the hell? Did you just make the computer talk? Congratulations, you are now
 a wizard.
 
@@ -18,6 +20,7 @@ It simply tells the computer to output to the console.
 #### What gets outputted?
 Anything that you put between those two parenthases. In this case, it's the phrase "Hello, World!". This string of text has to be contained within single, or
 double quotes (Python allows both). Try to run *this* code:
+###### Example 1.2
 ```python
 print(Hello, World!)
 ```
@@ -26,12 +29,14 @@ For our example, we used improper syntax for the print statement. The statement 
 recognize *Hello, World!* because when reading a string of text, it expects quotes before and after, hence `"Hello, World!"` and not `Hello, World!`.
 
 Let's try something else. Maybe I want to print the words "Hello" and "World" independently:
+###### Example 1.3
 ```python
 print("Hello,")
 print("World!")
 ```
 Try running this code and see what happens. Weird, they printed on two separate lines. Why is that? In Python, each print statement you write creates a new line. You
 can get rid of this for any print statement by adding `, end=""` to the end of your print statement, inside the parentheses:
+###### Example 1.4
 ```python
 print("Hello,", end="")
 print("World!")
@@ -40,6 +45,7 @@ There are a couple things to notice here. First, look at the first line. Notice 
 values, all separated by commas! So you can feed a print statement several different strings of characters, as long as you separate them by commas. The `end=""` is
 specifying that the end of the print statement should not do anything, rather than start a new line. Let's modify that code. What if we wanted to add the phrase, "The
 sun is shining!" to the end?
+###### Example 1.5
 ```python
 print("Hello,", end="")
 print("World!")
@@ -48,23 +54,27 @@ print("The sun is shining!")
 What went wrong here? "The sun is shining!" is on a new line, but why? Didn't we tell the print statement *not* to do that anymore by adding `end=""` to the first
 print statement? Nope. We only told the *first* print statement to do that. Each print statement is independent of other print statements. So you have to specify
 `end=""` for every print statement that you want to apply that rule to:
+###### Example 1.6
 ```python
 print("Hello,", end="")
 print("World!", end="")
 print("The sun is shining!", end="")
 ```
 Let's look at one last thing. Remember how I mentioned earlier that you can add multiple strings of text to one print statement? Well... Why not just do that?!?
+###### Example 1.7
 ```python
 print("Hello," ,  "World!" , "The sun is shining!")
 ```
 Wait a minute, where did those spaces come from??? There are no spaces in "Hello," or "World!" so why did a space get added between them? When you use a comma in
 a print statement, it adds a space! For strings of text, you can avoid these unwanted spaces by using **concatenation** instead. That's a fancy term for "replace the
 comma with a plus":
+###### Example 1.8
 ```python
 print("Hello," +  "World!" + "The sun is shining!")
 ```
 Now, all those spaces that we never typed are no longer there! For this specific text, it's pretty silly to do since we need those spaces, but here's some code that
 would make it useful:
+###### Example 1.9
 ```python
 print("Hel" + "lo," ,  "Wor" + "ld!" , "The" , "sun" , "is" , "shining!")
 ```
@@ -72,7 +82,7 @@ Notice how I used the `+` to concatenate the split words, and the commas as deli
 can be used to space-separate text.
 
 ## Further Explorations
-###### Here are some mini challenges for you to try out.
+###### Here are some mini challenges for you to try out. You can find examples 1.1 through 1.9 and solutions to the Further Exploration problems in solutions1.py
 
 1. Change the print statement so that it instead outputs `Hello, Universe!` instead
 2. Print your first name, last name, and age on three separate lines
