--- a/1. Your First Code/2. Arithmetic.md
+++ b/1. Your First Code/2. Arithmetic.md
@@ -4,15 +4,18 @@
 ## We Can Do Math!
 That's right, it's time for some numbers work. You can do a bunch of math in Python, and easily see it working. For starters, let's add a new line of code to your
 repl:
+###### Example 2.1
 ```python
 print(2 + 2)
 ```
 Run that. What did the console output? I bet it was 4. Was it 4? Dang, I am so good at this. That's right, the print statement accepts numbers and math, too! You can
 combine numbers AND text:
+###### Example 2.2
 ```python
 print("The United States has" ,  25 + 25 , "states!")
 ```
 But Python can do more than just addition. Let's try a few different operations, shall we? How about we start with the four main **operators**:
+###### Example 2.3
 ```python
 print(2 + 2)
 print(10 / 2)
@@ -21,6 +24,7 @@ print(10 - 5)
 ```
 If you run this code, you may notice that the results are printed, but it's just a bunch of numbers, which are hard to interpret as a reader. Let's add some text
 to the print statement using the skills you learned in the last section in order to make the output more readable:
+###### Example 2.4
 ```python
 print("2 + 2 =", 2 + 2)
 print("10 / 2 =", 10 / 2)
@@ -32,7 +36,7 @@ and `/` for division. But wait a second, why did the stuff in quotes not evaluat
 in quotes, so they are read by Python as a "string" type. Let's go on to the next section to discuss those. But first, play around with the arithmetic a bit.
 
 ## Further Explorations
-###### Here's a few things to try on your own to better understand arithmetic in Python:
+###### Here's a few things to try on your own to better understand arithmetic in Python. You can find all of the above examples, as well as solutions to the Further Explorations problems in solutions2.py
 ```
 Use the following information for your exploration problems:
 Laura is 6, Jane is 12, Max is 15, George is 22
